fix: update scrollbar

--- a/app/index.scss
+++ b/app/index.scss
@@ -165,7 +165,6 @@ $product-bg-color:#00AC8F;
                     left:72px;
                     bottom: 64px;
                     width: calc(100% -  72px);
-                    overflow-x: hidden;
                     overflow-y: hidden;
                 }
                 .product-list {
